Copied over latested version of WebCoreMJR

--- a/core/xml/templates/oneColumn.xml
+++ b/core/xml/templates/oneColumn.xml
@@ -24,5 +24,15 @@
 	<javascriptFiles>
 	</javascriptFiles>
 	<cssFiles>
+		<cssFile>
+			<file>base.css</file>
+			<map>base.css.map</map>
+			<group></group>
+		</cssFile>
+		<cssFile>
+			<file>navigation.css</file>
+			<map>navigation.css.map</map>
+			<group></group>
+		</cssFile>
 	</cssFiles>
 </page>
