--- a/core/sass/vars.scss
+++ b/core/sass/vars.scss
@@ -1,6 +1,6 @@
 $fontStack:    Helvetica, sans-serif;
 $fontColorMain: #CCC;
-$linkColorAlt: #333;
+$fontColorAlt: #333;
 $linkColorMain: #CCC;
 $linkColorAlt: #333;
 $backgroundColorMain: #444;
