--- a/core/css/base.css
+++ b/core/css/base.css
@@ -1,8 +1,13 @@
+html {
+  height: 100%;
+}
+
 body {
   font: 100% Helvetica, sans-serif;
   color: #CCC;
   background-color: #444;
   margin: 0;
+  height: 100%;
 }
 
 footer {
