--- a/core/sass/base.scss
+++ b/core/sass/base.scss
@@ -1,10 +1,15 @@
 @import "vars.scss";
 
+html {
+    height: 100%;
+}
+
 body {
   font: 100% $fontStack;
   color: $fontColorMain;
   background-color: $backgroundColorMain;
   margin: 0;
+  height: 100%;
 }
 
 footer {
