Updated WebCoreMJR to 0.1.1

--- a/core/xml/templates/oneColumn.xml
+++ b/core/xml/templates/oneColumn.xml
@@ -34,5 +34,10 @@
 			<map>navigation.css.map</map>
 			<group></group>
 		</cssFile>
+		<cssFile>
+			<file>lightbox.css</file>
+			<map></map>
+			<group></group>
+		</cssFile>
 	</cssFiles>
 </page>
