--- a/core/sass/navigation.scss
+++ b/core/sass/navigation.scss
@@ -27,9 +27,14 @@
 			text-decoration: none;
 			padding: 12px 16px;
 			color: $linkColorAlt;
+
+			&:hover, &.active {
+				background-color: $backgroundColorMain;
+				color: $fontColorMain;
+			}
 		}
 
-		a:hover, .dropdown:hover .dropbtn {
+		.dropdown:hover .dropbtn {
 			background-color: $backgroundColorMain;
 			color: $fontColorMain;
 		}
@@ -131,6 +136,10 @@
 
 .navIconNotChecked{
 	display: none;
+}
+
+.noLink{
+	cursor: default;
 }
 
 @media only screen and (max-width : 640px) {
